# EfficientSparseAttention

./: .gitignore  README.md  approximation-experiment.py  main.py  plotting.ipynb  profiling-experiment.py  pyproject.toml  setup.py  utils.py
approx-output-arc/: avg_l2_distances_09.10-13:43.pt  avg_l2_distances_normal_09.10-13:43.pt  full_l2_distances_09.10-13:43.pt  full_l2_distances_normal_09.10-13:43.pt  ks_09.10-13:43.pt  std_l2_distances_09.10-13:43.pt  std_l2_distances_normal_09.10-13:43.pt
baselines/: faiss.py  full.py  naive_sparse.py  post_processing.py  symbolic_sparse.py  torchpq.py
jobs/: interactive-job-command.txt  run_profiling_experiments.sh  sparse_cpp_varying_kq_dim.sh
methods/: annoy.py  faiss.py  flash_attn.py  full.py  naive_sparse.py  post_processing.py  symbolic_sparse.py
plotting/: DisplaySettings.py  ResultsManager.py  inference.ipynb  training.ipynb
run/: faiss_varying_kq_dim.sh  full_varying_kq_dim.sh  sym_varying_kq_dim.sh
src/: sparse_attention.cpp
