[project]
name = "efficient-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-gpu>=1.7.2",
    "flash-attn>=2.7.4.post1",
    "ninja>=1.11.1.3",
    "numpy>=2.0.2",
    "pykeops>=2.2.3",
    "setuptools>=76.0.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "wheel>=0.45.1",
]
